...
    <string name="last_name">Last name</string>
    <string name="logo">Logo</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password_instructions">Enter your email below to receive your password reset instructions</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="pwd_reset_email_sent">Password reset link sent. Please check your email</string>
    <string name="username">Username</string>
    <string name="length_error_8_150">Length must be between 8 and 150.</string>
    <string name="profile">Profile</string>
    <string name="connected_devices">Connected devices</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
...
